--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,67 @@
 body {
-    margin: 50px 0px 0px 100px;
+    width: 800px;
+    height: 1056px;
+    margin: 60px auto 150px auto;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-img {
+
+h2 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+
+time {
+    display: block;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color: red;
+    font-style: italic;
+}
+
+a:hover {
+    color: lightcoral;
+}
+
+p {
+    font-size: 15px;
+}
+
+.art1 {
+    display: block;
+    background-color: lightgrey;
+    padding: 20px 10px 10px 10px;
+}
+
+.art2 {
+    display: block;
+    background-color: lightgrey;
+    padding: 20px 10px 10px 10px;
+}
+
+.art3 {
+    display: block;
+    background-color: lightgrey;
+    padding: 20px 10px 10px 10px;
+}
+
+.art4 {
+    display: block;
+    background-color: lightgrey;
+    padding: 20px 10px 10px 10px;
+}
+
+time {
+    font-style: italic;
+}
+
+article img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 400px;
     height: auto;
 }
